--- a/mcpe-server/server.properties
+++ b/mcpe-server/server.properties
@@ -1,4 +1,4 @@
-server-name=Dedicated Server
+server-name=Toca da Tropa do Mascote
 # Used as the server name
 # Allowed values: Any string without semicolon symbol.
 
@@ -6,7 +6,7 @@ gamemode=survival
 # Sets the game mode for new players.
 # Allowed values: "survival", "creative", or "adventure"
 
-force-gamemode=false
+force-gamemode=true
 # force-gamemode=false (or force-gamemode is not defined in the server.properties)
 # prevents the server from sending to the client gamemode values other
 # than the gamemode value saved by the server during world creation
@@ -16,7 +16,7 @@ force-gamemode=false
 # other than the gamemode value saved by the server during world creation
 # if those values are set in server.properties after world creation.
 
-difficulty=easy
+difficulty=normal
 # Sets the difficulty of the world.
 # Allowed values: "peaceful", "easy", "normal", or "hard"
 
@@ -61,7 +61,7 @@ tick-distance=4
 # The world will be ticked this many chunks away from any player.
 # Allowed values: Integers in the range [4, 12]
 
-player-idle-timeout=30
+player-idle-timeout=0
 # After a player has idled for this many minutes they will be kicked. If set to 0 then players can idle indefinitely.
 # Allowed values: Any non-negative integer.
 
@@ -74,10 +74,10 @@ max-threads=8
 # Maximum number of threads the server will try to use. If set to 0 or removed then it will use as many as possible.
 # Allowed values: Any positive integer.
 
-level-name=Bedrock level
+level-name=MyWorld
 # Allowed values: Any string without semicolon symbol or symbols illegal for file name: /\n\r\t\f`?*\\<>|\":
 
-level-seed=
+level-seed=13
 # Use to randomize the world
 # Allowed values: Any string
 
@@ -89,11 +89,11 @@ texturepack-required=false
 # Force clients to use texture packs in the current world
 # Allowed values: "true" or "false"
 
-content-log-file-enabled=false
+content-log-file-enabled=true
 # Enables logging content errors to a file
 # Allowed values: "true" or "false"
 
-content-log-console-output-enabled=false
+content-log-console-output-enabled=true
 # Enables logging content errors to stdout
 # Allowed values: "true" or "false"
 
